# UniShader

./: CMakeLists.txt  LICENSE  README
cmake/: FindGLEW.cmake  FindUniShader.cmake
include/UniShader/: Attribute.h  Attribute.h~  Buffer.h  Buffer.h~  Buffer.inl  Buffer.inl~  Config.h  GLSLType.h  GLSLType.h~  InternalBuffer.h  InternalBuffer.h~  ObjectBase.h  OpenGL.h  PrimitiveType.h  SafePtr.h  SafePtr.h~  SafePtr.inl  ShaderInput.h  ShaderInput.h~  ShaderObject.h  ShaderObject.h~  ShaderOutput.h  ShaderOutput.h~  ShaderOutput.inl  ShaderOutput.inl~  ShaderProgram.h  ShaderProgram.h~  Signal.h  Signal.h~  Texture.h  TextureBuffer.h  TextureBuffer.h~  TextureUnit.h  TextureUnit.h~  TypeResolver.h  TypeResolver.h~  UniShader.h  UniShader.h~  Uniform.h  Uniform.h~  (+6 more)
src/UniShader/: Attribute.cpp  Buffer.cpp  Buffer.cpp~  GLSLType.cpp  GLSLType.cpp~  InternalBuffer.cpp  InternalBuffer.cpp~  OpenGL.cpp  OpenGL.cpp~  ShaderInput.cpp  ShaderInput.cpp~  ShaderObject.cpp  ShaderObject.cpp~  ShaderOutput.cpp  ShaderOutput.cpp~  ShaderProgram.cpp  ShaderProgram.cpp~  Signal.cpp  Signal.cpp~  Texture.cpp  TextureBuffer.cpp  TextureBuffer.cpp~  TextureUnit.cpp  TextureUnit.cpp~  TypeResolver.cpp  TypeResolver.cpp~  UniShader.cpp  UniShader.cpp~  Uniform.cpp  Uniform.cpp~  Varying.cpp  Varying.cpp~
